RBAC/config-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configmap-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: story-app
  template:
    metadata:
      labels:
        app: story-app
    spec:
      containers:
        - name: story-app
          image: hello-world
