RBAC/http_liveness_command.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    test: liveness
  name: liveness-exec
spec:
  containers:
  - name: liveness
    image: k8s.gcr.io/busybox
    livenessProbe:
      httpGet:
        path: /healthz
        port: 8080
        httpHeaders:
         - name: X-Custom-Header
           value: Awesome
      initialDelaySeconds: 15
      periodSeconds: 5
