RBAC/tcp_liveness.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    test: liveness
  name: liveness-exec
spec:
  containers:
  - name: liveness
    image: k8s.gcr.io/busybox
    livenessProbe: # Begins the HTTP Liveness Probe
      httpGet:
        path: /healthz
        port: 8080
        httpHeaders:
         - name: X-Custom-Header
           value: Awesome
      initialDelaySeconds: 15
      periodSeconds: 5
    livenessProbe: # Begins the TCP Liveness Probe
      tcpSocket:
        port: 8080
      initialDelaySeconds: 15
      periodSeconds: 5
